--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSWebsite</title>
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/f33a9b5754.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="/" id="navbar__logo">JSWebsite</a>
+        <a href="/" id="navbar__logo"
+          ><i class="fa-solid fa-folder-open"></i>JSWebsite</a
+        >
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
