--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <div class="navbar__container">
         <a href="/" id="navbar__logo"
-          ><i class="fa-solid fa-folder-open"></i>JSWebsite</a
+          ><i class="fa-regular fa-wrench-simple fa-spin"></i>JSWebsite</a
         >
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
