--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
         </ul>
       </div>
     </nav>
+
+    <!--Main Section -->
+
+    <div class="main">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>Together we create!</h1>
+          <h2>Let's build together</h2>
+          <p>See what makes us unique</p>
+          <button class="main__btn"><a href="/">Get Started</a></button>
+        </div>
+        <div class="main__img--container">
+          <img src="img/pic1.jpg" alt="pic" id="main__img" />
+        </div>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
