--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
       src="https://kit.fontawesome.com/f33a9b5754.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar__container">
         <a href="/" id="navbar__logo"
-          ><i class="fa-regular fa-wrench-simple fa-spin"></i>JSWebsite</a
+          ><i class="fa-regular fa-wrench-simple"></i>JSWebsite</a
         >
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
@@ -46,7 +52,7 @@
         <div class="main__content">
           <h1>Together we create!</h1>
           <h2>Let's build together</h2>
-          <p>See what makes us unique</p>
+          <p>See what makes us unique.</p>
           <button class="main__btn"><a href="/">Get Started</a></button>
         </div>
         <div class="main__img--container">
