--- a/index.html
+++ b/index.html
@@ -46,7 +46,22 @@
     </nav>
 
     <!--Main Section -->
-
+    <div class="services">
+      <h1>See what the hype is about</h1>
+      <div class="services__container">
+        <div class="services__card">
+          <h2>Experience bliss</h2>
+          <p>AI Powered Tech</p>
+          <button>Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Are you ready?</h2>
+          <p>Take the leap</p>
+          <button>Get Started</button>
+        </div>
+      </div>
+    </div>
+    <!-- Main Section -->
     <div class="main">
       <div class="main__container">
         <div class="main__content">
