--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar">
       <div class="navbar__container">
         <a href="/" id="navbar__logo"
-          ><i class="fa-regular fa-wrench-simple"></i>JSWebsite</a
+          ><i class="fa-regular fa-gear-complex-code"></i>JSWebsite</a
         >
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
@@ -45,6 +45,20 @@
       </div>
     </nav>
 
+    <div class="main">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>Together we create!</h1>
+          <h2>Let's build together</h2>
+          <p>See what makes us unique.</p>
+          <button class="main__btn"><a href="/">Get Started</a></button>
+        </div>
+        <div class="main__img--container">
+          <img src="img/pic1.jpg" alt="pic" id="main__img" />
+        </div>
+      </div>
+    </div>
+
     <!--Main Section -->
     <div class="services">
       <h1>See what the hype is about</h1>
@@ -62,16 +76,36 @@
       </div>
     </div>
     <!-- Main Section -->
-    <div class="main">
-      <div class="main__container">
-        <div class="main__content">
-          <h1>Together we create!</h1>
-          <h2>Let's build together</h2>
-          <p>See what makes us unique.</p>
-          <button class="main__btn"><a href="/">Get Started</a></button>
+    <!-- Footer -->
+    <div class="footer__container">
+      <div class="footer__links">
+        <div class="footer__link--wrapper">
+          <div class="footer__link--items">
+            <h2>About us</h2>
+            <a href="">How it works</a>
+            <a href="">Testimonials</a>
+            <a href="">Careers</a>
+            <a href="">Investements</a>
+            <a href="">Terms of Service </a>
+          </div>
+          <div class="footer__link--items">
+            <h2>Contact us</h2>
+            <a href="">How it works</a>
+            <a href="">Testimonials</a>
+            <a href="">Careers</a>
+            <a href="">Investements</a>
+            <a href="">Terms of Service </a>
+          </div>
         </div>
-        <div class="main__img--container">
-          <img src="img/pic1.jpg" alt="pic" id="main__img" />
+        <div class="footer__link--wrapper">
+          <div class="footer__link--items">
+            <h2>Social Media</h2>
+            <a href="">How it works</a>
+            <a href="">Testimonials</a>
+            <a href="">Careers</a>
+            <a href="">Investements</a>
+            <a href="">Terms of Service </a>
+          </div>
         </div>
       </div>
     </div>
