--- a/index.html
+++ b/index.html
@@ -82,29 +82,70 @@
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>About us</h2>
-            <a href="">How it works</a>
-            <a href="">Testimonials</a>
-            <a href="">Careers</a>
-            <a href="">Investements</a>
-            <a href="">Terms of Service </a>
+            <a href="/">How it works</a>
+            <a href="/">Testimonials</a>
+            <a href="/">Careers</a>
+            <a href="/">Investements</a>
+            <a href="/">Terms of Service </a>
           </div>
           <div class="footer__link--items">
             <h2>Contact us</h2>
-            <a href="">How it works</a>
-            <a href="">Testimonials</a>
-            <a href="">Careers</a>
-            <a href="">Investements</a>
-            <a href="">Terms of Service </a>
+            <a href="/">How it works</a>
+            <a href="/">Testimonials</a>
+            <a href="/">Careers</a>
+            <a href="/">Investements</a>
+            <a href="/">Terms of Service </a>
           </div>
         </div>
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>Social Media</h2>
-            <a href="">How it works</a>
-            <a href="">Testimonials</a>
-            <a href="">Careers</a>
-            <a href="">Investements</a>
-            <a href="">Terms of Service </a>
+            <a href="/">How it works</a>
+            <a href="/">Testimonials</a>
+            <a href="/">Careers</a>
+            <a href="/">Investements</a>
+            <a href="/">Terms of Service </a>
+          </div>
+        </div>
+      </div>
+      <div class="social__media">
+        <div class="social__media--wrapp">
+          <div class="footer__logo">
+            <a href="/" id="footer__logo"
+              ><i class="fas faa-gem"></i>JSWebsite</a
+            >
+          </div>
+          <p class="website__right">©️JSWebsite. All rights reserved.</p>
+          <div class="social__icons">
+            <a
+              href="https://github.com/BratislavPanajotovic?tab=overview&from=2023-04-01&to=2023-04-22"
+              class="social__icon--link"
+              target="_blank"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/profile.php?id=100014675646492"
+              class="social__icon--link"
+              target="_blank"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+
+            <a
+              href="https://www.linkedin.com/in/bratislav-panajotovi%C4%87-26302422a/"
+              class="social__icon--link"
+              target="_blank"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/bratis.lav/"
+              class="social__icon--link"
+              target="_blank"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
           </div>
         </div>
       </div>
