--- a/index.html
+++ b/index.html
@@ -97,22 +97,21 @@
             <a href="/">Terms of Service </a>
           </div>
         </div>
-        <div class="footer__link--wrapper">
-          <div class="footer__link--items">
-            <h2>Social Media</h2>
-            <a href="/">How it works</a>
-            <a href="/">Testimonials</a>
-            <a href="/">Careers</a>
-            <a href="/">Investements</a>
-            <a href="/">Terms of Service </a>
-          </div>
+
+        <div class="footer__link--items">
+          <h2>Social Media</h2>
+          <a href="/">How it works</a>
+          <a href="/">Testimonials</a>
+          <a href="/">Careers</a>
+          <a href="/">Investements</a>
+          <a href="/">Terms of Service </a>
         </div>
       </div>
       <div class="social__media">
         <div class="social__media--wrapp">
           <div class="footer__logo">
             <a href="/" id="footer__logo"
-              ><i class="fas faa-gem"></i>JSWebsite</a
+              ><i class="fa-regular fa-gear-complex-code"></i>JSWebsite</a
             >
           </div>
           <p class="website__right">©️JSWebsite. All rights reserved.</p>
