--- a/index.html
+++ b/index.html
@@ -96,8 +96,18 @@
             <a href="/">Investements</a>
             <a href="/">Terms of Service </a>
           </div>
+        </div>
+        <div class="footer__link--wrapper">
           <div class="footer__link--items">
-            <h2>Social Media</h2>
+            <h2>About us</h2>
+            <a href="/">How it works</a>
+            <a href="/">Testimonials</a>
+            <a href="/">Careers</a>
+            <a href="/">Investements</a>
+            <a href="/">Terms of Service </a>
+          </div>
+          <div class="footer__link--items">
+            <h2>Contact us</h2>
             <a href="/">How it works</a>
             <a href="/">Testimonials</a>
             <a href="/">Careers</a>
