--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JSWebsite</title>
+    <title>HTML/CSS Website</title>
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/f33a9b5754.js"
@@ -21,7 +21,7 @@
     <nav class="navbar">
       <div class="navbar__container">
         <a href="/" id="navbar__logo"
-          ><i class="fa-regular fa-gear-complex-code"></i>JSWebsite</a
+          ><i class="fa-regular fa-gear-complex-code"></i>HTML/CSS Website</a
         >
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
@@ -124,7 +124,9 @@
               ><i class="fa-regular fa-gear-complex-code"></i>JSWebsite</a
             >
           </div>
-          <p class="website__right">©️JSWebsite. All rights reserved.</p>
+          <p class="website__right">
+            ©️BratislavPanajotovic. All rights reserved.
+          </p>
           <div class="social__icons">
             <a
               href="https://github.com/BratislavPanajotovic?tab=overview&from=2023-04-01&to=2023-04-22"
